--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,12 @@
             // For more information about the 'console' field, see https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md#console-terminal-window
             "console": "internalConsole",
             "stopAtEntry": false,
-            "internalConsoleOptions": "openOnSessionStart"
+            "internalConsoleOptions": "openOnSessionStart",
+            "env": {
+                "openstig-api-read-server" : "http://localhost:8084",
+                "mongoConnection": "mongodb://openstigscore:openstig1234!@localhost",
+                "mongodb": "openstigscore"
+            },
         },
         {
             "name": ".NET Core Attach",
