--- a/openstig-msg-score.csproj
+++ b/openstig-msg-score.csproj
@@ -3,6 +3,9 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <RootNamespace>openstig_msg_score</RootNamespace>
+    <Version>0.1</Version>
+    <InformationalVersion>This is an alpha of the openSTIG Tool Messaging API for scoring checklists from Cingulara</InformationalVersion>
   </PropertyGroup>
 
   <ItemGroup>
