--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,7 +20,8 @@
             "env": {
                 "openstig-api-read-server" : "http://localhost:8084",
                 "mongoConnection": "mongodb://openstigscore:openstig1234!@localhost",
-                "mongodb": "openstigscore"
+                "mongodb": "openstigscore",
+                "natsserverurl": "nats://192.168.11.46:4222"
             },
         },
         {
