update for openRMF naming

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/openstig-msg-score.csproj"
+                "${workspaceFolder}/openrmf-msg-score.csproj"
             ],
             "problemMatcher": "$msCompile"
         }
