--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -25,4 +25,4 @@ jobs:
     - name: Build
       run: dotnet build src --configuration Release --no-restore
     - name: Test
-      run: dotnet test src --no-restore --verbosity normal
+      run: dotnet test tests --no-restore --verbosity normal
