--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -22,7 +22,13 @@ jobs:
         dotnet-version: '2.2.101'
     - name: Install dependencies
       run: dotnet restore src
+      with:
+        dotnet-version: '2.2.101'
     - name: Build
       run: dotnet build src --configuration Release --no-restore
+      with:
+        dotnet-version: '2.2.101'
     - name: Test
-      run: dotnet test tests --no-restore --verbosity normal
+      run: dotnet test tests --verbosity normal
+      with:
+        dotnet-version: '2.2.101'
