.NET Core 3.1 Updates

--- a/src/.vscode/launch.json
+++ b/src/.vscode/launch.json
@@ -6,15 +6,16 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/netcoreapp2.2/openrmf-msg-score.dll",
+            "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/openrmf-msg-score.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
             "console": "internalConsole",
             "stopAtEntry": false,
             "internalConsoleOptions": "openOnSessionStart",
             "env": {
-                "MONGODBCONNECTION": "mongodb://openrmfscore:openrmf1234!@localhost/openrmfscore?authSource=admin",
-                "MONGODB": "openrmfscore",
+                "DBCONNECTION": "mongodb://openrmfscore:openrmf1234!@localhost/openrmfscore?authSource=admin",
+                "DB": "openrmfscore",
+                "DBTYPE": "mongo",
                 "NATSSERVERURL": "nats://127.0.0.1:4222"
             },
         },
