--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -28,7 +28,7 @@ jobs:
       run: dotnet test tests --verbosity normal
     - name: Build the Docker image
       run: docker build . --file ./Dockerfile --tag localbuild/openrmf-msg-score:latest
-    - uses: anchore/scan-action@master
+    - uses: anchore/scan-action@v2
       with:
         image-reference: "localbuild/openrmf-msg-score:latest"
         dockerfile-path: "./Dockerfile"
