update to dotnet 6 and v1.8

--- a/src/.vscode/launch.json
+++ b/src/.vscode/launch.json
@@ -6,7 +6,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/openrmf-msg-score.dll",
+            "program": "${workspaceFolder}/bin/Debug/net6.0/openrmf-msg-score.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
             "console": "internalConsole",
