--- a/src/openrmf-msg-score.csproj
+++ b/src/openrmf-msg-score.csproj
@@ -2,20 +2,20 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>openrmf_msg_score</RootNamespace>
     <ProjectGuid>{935d6f6d-15ec-4948-8128-df1a3782a301}</ProjectGuid>
-    <Version>1.07.00</Version>
-    <InformationalVersion>This is the OpenRMF Tool Messaging API for scoring checklists from Cingulara</InformationalVersion>
+    <Version>1.08.00</Version>
+    <InformationalVersion>This is the OpenRMF OSS Application Messaging client for scoring checklists from Cingulara</InformationalVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="NATS.Client" Version="0.10.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
-    <PackageReference Include="mongodb.driver" Version="2.10.4" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.5" />
-    <PackageReference Include="NLog" Version="4.7.2" />
-    <PackageReference Include="NLog.Extensions.Logging" Version="1.6.4" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="mongodb.driver" Version="2.14.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="NLog" Version="4.7.13" />
+    <PackageReference Include="NLog.Extensions.Logging" Version="1.7.4" />
   </ItemGroup>
 
   <ItemGroup>
